--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
 body{
-    color: aqua
+    color: aqua;
+    background: rgb(170, 91, 17);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+}
+input{
+    font-size: x-large;
+    font-weight: bold;
+    padding: 10px;
+    width: 75%;
+    border: none;
+    border-radius: 25px;
+    text-align: center;
 }
