--- a/style.css
+++ b/style.css
@@ -16,3 +16,13 @@ input{
     border-radius: 25px;
     text-align: center;
 }
+a{
+    padding: 10px;
+    font-size: 20px;
+    text-decoration: none;
+    border: 1px solid black;
+    margin-top: 10px;
+    border-radius: 10px;
+    background-color: rgba(8, 8, 8, 0.288);
+    color: coral;
+}
